# popclass

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  Dockerfile  NOTICE  README.md  codecov.yml  model.py  posterior.py  pyproject.toml  requirements.txt  visualization.py
.github/: pull_request_template.md
.github/workflows/: draft-pdf.yml  package.yml  test.yml  test_package.yml
JOSS/: paper.bib  paper.md
docs/: requirements.txt
docs/source/: acknowledgements.rst  api.rst  background.rst  changelog.rst  conf.py  contributing.rst  developer.rst  example_notebook.rst  getting_started.ipynb  gettingstarted.rst  index.rst  installation.rst  library.rst  refs.bib  tutorials.rst
docs/source/examples/: getting_started.ipynb  popclass_example_workflow.ipynb  popclass_tutorial.ipynb  popsycle_model_example.ipynb  posterior_interface.ipynb
docs/source/examples/data/: popsycle_test.asdf  sample_population_file_refined_events_ubv_I_Damineli16.fits
examples/: popclass_tutorial.ipynb  popsycle_model_example.ipynb
popclass/: classify.py  density.py  model.py  posterior.py  uq.py  visualization.py
popclass/data/: popsycle_singles_raithel18.asdf  popsycle_singles_spera15.asdf  popsycle_singles_sukhboldn20.asdf
tests/: example_visualize.py  test_classify.py  test_model.py  test_posterior.py  test_uq.py  test_visualization.py  test_visualize.py
