[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "popclass"
version = "0.1.2"
description = "A python package for classifying microlensing events"
authors = [{ name = "Greg Sallaberry, Scott E. Perkins, Peter McGill, Zofia Kaczmarek, William A. Dawson", email = "mcgill5@llnl.gov" }]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = ["scipy", "numpy", "asdf", "matplotlib"]

[tool.setuptools.packages.find]
where = ["popclass/data"]

[tool.setuptools.package-data]
mypkg = ["*.asdf"]

[project.optional-dependencies]
test = ["pytest", "arviz", "dynesty"]
docs = ["sphinx","sphinx_rtd_theme", "sphinxcontrib-bibtex"]

[project.urls]
Homepage = "https://github.com/llnl/popclass"
Documentation = "https://software.llnl.gov/popclass"
Repository = "https://github.com/llnl/popclass.git"
Issues = "https://github.com/llnl/popclass.git/issues"
Changelog = "https://software.llnl.gov/popclass/changlog"
