[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "popclass"
version = "0.2.2"
description = "A python package that allows flexable, probabilistic classification of a microlensing event"
authors = [{ name = "Greg Sallaberry, Scott E. Perkins, Peter McGill, Zofia Kaczmarek, William A. Dawson", email = "mcgill5@llnl.gov" }]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = ["scipy", "numpy", "asdf", "matplotlib", "scikit-learn"]

[tool.setuptools.packages.find]
where = ["popclass/data"]

[tool.setuptools.package-data]
mypkg = ["*.asdf"]

[project.optional-dependencies]
test = ["pytest", "arviz", "dynesty"]
docs = ["sphinx","sphinx_rtd_theme", "sphinxcontrib-bibtex"]

[project.urls]
Homepage = "https://github.com/llnl/popclass"
Documentation = "https://popclass.readthedocs.io"
Repository = "https://github.com/llnl/popclass"
Issues = "https://github.com/llnl/popclass/issues"
Changelog = "https://github.com/LLNL/popclass/releases"
